--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
-        <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Space+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Space+Mono&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
     <div class="parent">
-        <h1>ISS Location Tracker</h1>
-        <div class="container">
-            <div id="issMap"></div>
-
-            <div class="info">
-                Latitude: <span id="lat"></span>
-                Longitude: <span id="lon"></span>
-                Visibility: <span id="visibility"></span>
+        <div class="section">
+            <div class="title">
+                <h1>ISS Location Tracker</h1>
             </div>
+            <div id="issMap"></div>
         </div>
-        <a href='https://www.freepik.com/photos/star'>Star photo created by www.slon.pics - www.freepik.com</a>
+        <div class="info">
+            <p>Coordinates: <span id="lat"></span>, <span id="lon"></span>.</p>
+            <p>Velocity: <span id="velocity"></span>.</p>
+            <p>Visibility: <span id="visibility"></span></p>
+        </div>
+
+        <div class="footer"><a href='https://www.freepik.com/photos/star'>star photo created by www.slon.pics -
+                www.freepik.com</a></div>
     </div>
-
-
     <script src="script.js"></script>
 </body>
 
